# QNAPhomebrew

./: .gitignore  DEBIAN-rsyncd.conf  DEBIAN-rsyncd.passwd  Depends  Extras  Makefile  QNAP_clone_alldisk.md  QNAP_clone_alldisk.sh  QNAP_clone_disk.md  QNAP_clone_disk.sh  QNAP_commision_disk.md  QNAP_commision_disk.sh  QNAP_config_disk.md  QNAP_config_disk.sh  QNAP_create_raid.md  QNAP_create_raid.sh  QNAP_manage_disks.service  QNAP_manage_disks.service.md  QNAP_recreate_raid.md  QNAP_recreate_raid.sh  QNAPflash.md  QNAPgensamba.md  QNAPgensamba.sh  QNAPinstalldepends.md  QNAPinstalldepends.sh  QNAPmount.md  QNAPmount.service  QNAPmount.service.md  QNAPmount.sh  README  WHERES-WALLY  action_flash_kernel.sh  choose-root  construct_dl_image.sh  count_goes.sh  dl_flash_functions  dl_flash_kernel.sh  fake_flash_kernel.sh  grab-all-mdt-with-QTS.sh  grab-all-mdt-with-mouiche.sh  (+1 more)
doc/: QNAP_Homebrew_overview.odt
etc/: QNAPsmb.conf
etc/QNAPsmb.d/: 05printer.conf  10home.conf  15homes.conf  20Download.conf  30Public.conf  40Multimedia.conf  50Recordings.conf  60USBUploads.conf  70Backup.conf  80Fastmedia.conf  InternalAdmin.conf.not  Web.conf.not  git.conf.not  shares  svn.conf.not
src/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  QNAP_manage_disks.c  QNAP_manage_disks.md  README  config.status  configure  configure.ac  myhdparm.c
src/.deps/: QNAP_manage_disks-QNAP_manage_disks.Po  myhdparm-myhdparm.Po
src/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/lib/: hdparmdep.c  hdparmdep.h  makefile
